--- a/create.html
+++ b/create.html
@@ -26,14 +26,18 @@
         <input type="text" class="form-control" id="l_name" value="" placeholder="...">
         <label class="mt-3" for="email">Email</label>
         <input type="email" class="form-control" id="email" value="" placeholder="...">
-        <button class="btn btn-primary mt-4 float-right" type="submit">Create</button>
+        <!-- type button ( byt till "submit" när vi ska skapa i databasen.) -->
+        <button onclick="createUser(event);" class="btn btn-primary mt-4 float-right" type="button">Create</button> 
       </form>
     </div>
   </main>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
           integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
           crossorigin="anonymous"></script>
-  <script src="./js/custom.js"></script>
+  <script src="js\custom.js"></script>
+  <script src="js\api.js"></script>
+  <script src="js\User.js"></script>
+  <!-- <script src="js\UserList.js"></script> -->
 
 </body>
 
