--- a/read.html
+++ b/read.html
@@ -25,8 +25,10 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
           integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
           crossorigin="anonymous"></script>
-  <script src="./js/custom.js"></script>
-
+  <script src="js\custom.js"></script>
+  <script src="js\api.js"></script>
+  <script src="js\User.js"></script>
+  <script src="js\UserList.js"></script>
 </body>
 
 </html>
