--- a/create.html
+++ b/create.html
@@ -27,7 +27,7 @@
         <label class="mt-3" for="email">Email</label>
         <input type="email" class="form-control" id="email" value="" placeholder="...">
         <!-- type button ( byt till "submit" när vi ska skapa i databasen.) -->
-        <button onclick="createUser(event);" class="btn btn-primary mt-4 float-right" type="button">Create</button> 
+       <button onclick="createUser;" class="btn btn-primary mt-4 float-right" type="button">Create</button>
       </form>
     </div>
   </main>
