--- a/create.html
+++ b/create.html
@@ -36,7 +36,7 @@
           crossorigin="anonymous"></script>
   <script src="js\custom.js"></script>
   <script src="js\api.js"></script>
-  <script src="js\User.js"></script>
+  <script src="js\UserCreate.js"></script>
   <!-- <script src="js\UserList.js"></script> -->
 
 </body>
