--- a/delete.html
+++ b/delete.html
@@ -23,7 +23,7 @@
         <label class="mt-3" for="user">Users</label>
         <div class="d-flex">
           <select class="form-select w-50" id="user" name="user"></select>
-          <button class="btn btn-danger ml-3" type="submit">Delete</button>
+          <button class="btn btn-danger ml-3" type="submit" onclick="removeUser(event)">Delete</button>
         </div>
       </form>
     </div>
@@ -31,7 +31,9 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
           integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
           crossorigin="anonymous"></script>
-  <script src="./js/custom.js"></script>
+  <script src="js\custom.js"></script>
+  <script src="js\api.js"></script>
+  <script src="js\UserDelete.js"></script>
 
 </body>
 
