--- a/update.html
+++ b/update.html
@@ -29,14 +29,17 @@
         <label class="mt-3" for="presentation">Presentation</label>
         <input type="text" class="form-control" id="presentation" value="" placeholder="...">
 
-        <button class="btn btn-primary mt-4 float-right" type="submit">Update</button>
+        <button class="btn btn-primary mt-4 float-right" onclick ="updateUser(event)" type="submit">Update</button>
       </form>
     </div>
   </main>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
           integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
           crossorigin="anonymous"></script>
-  <script src="./js/custom.js"></script>
+  <script src="js\api.js"></script>
+  <script src="js\Custom.js"></script>
+  <!-- <script src="js\UserCreate.js"></script> -->
+  <script src="js\UserUpdate.js"></script>
 
 </body>
 
