--- a/update.html
+++ b/update.html
@@ -28,8 +28,7 @@
         <input type="email" class="form-control" id="email" value="" placeholder="...">
         <label class="mt-3" for="presentation">Presentation</label>
         <input type="text" class="form-control" id="presentation" value="" placeholder="...">
-
-        <button class="btn btn-primary mt-4 float-right" onclick ="updateUser(event)" type="submit">Update</button>
+        <button class="btn btn-primary mt-4 float-right" type="submit">Update</button>
       </form>
     </div>
   </main>
@@ -38,7 +37,7 @@
           crossorigin="anonymous"></script>
   <script src="js\api.js"></script>
   <script src="js\Custom.js"></script>
-  <!-- <script src="js\UserCreate.js"></script> -->
+  <!-- <script src="js\UserList.js"></script> -->
   <script src="js\UserUpdate.js"></script>
 
 </body>
